--- a/configure.in
+++ b/configure.in
@@ -1421,6 +1421,9 @@ AC_ARG_ENABLE(stacktraces,
 [ if test "$enableval" = "yes" ; then
     echo "Enabling automatic stack backtraces on fatal errors"
     AC_DEFINE(PRINT_STACK_TRACE, 1, [Print stacktraces on fatal errors])
+    if test "$GCC" = "yes"; then
+	LDFLAGS="$CFLAGS -rdynamic"
+    fi
   fi
 ])
 
