--- a/configure.in
+++ b/configure.in
@@ -1,13 +1,12 @@
 dnl
 dnl  Configuration input file for Squid
 dnl
-dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
-dnl
 dnl  $Id$
 dnl
 dnl
 dnl
 AC_INIT(Squid Web Proxy, 2.6.PRE2-CVS, http://www.squid-cache.org/bugs/, squid)
+AC_PREREQ(2.52)
 AM_CONFIG_HEADER(include/autoconf.h)
 AC_CONFIG_AUX_DIR(cfgaux)
 AM_INIT_AUTOMAKE
