--- a/trunk/src/Makefile.in
+++ b/trunk/src/Makefile.in
@@ -83,16 +83,16 @@ pinger_LDADD = $(LDADD)
 pinger_DEPENDENCIES =
 am__squid_SOURCES_DIST = access_log.c acl.c asn.c authenticate.c \
 	cache_cf.c CacheDigest.c cache_manager.c carp.c cbdata.c \
-	client_db.c client_side.c comm.c comm_epoll.c comm_poll.c \
-	comm_select.c debug.c defines.h delay_pools.c disk.c \
-	dns_internal.c dns.c enums.h errorpage.c event.c errormap.c \
-	external_acl.c fd.c filemap.c forward.c fqdncache.c ftp.c \
-	globals.h gopher.c helper.c htcp.c http.c HttpStatusLine.c \
-	HttpHdrCc.c HttpHdrRange.c HttpHdrContRange.c HttpHeader.c \
-	HttpHeaderTools.c HttpBody.c HttpMsg.c HttpReply.c \
-	HttpRequest.c icmp.c icp_v2.c icp_v3.c ident.c internal.c \
-	ipc.c ipcache.c leakfinder.c locrewrite.c logfile.c main.c \
-	mem.c MemPool.c MemBuf.c mime.c multicast.c neighbors.c \
+	client_db.c client_side.c comm.c comm_epoll.c comm_kqueue.c \
+	comm_poll.c comm_select.c debug.c defines.h delay_pools.c \
+	disk.c dns_internal.c dns.c enums.h errorpage.c event.c \
+	errormap.c external_acl.c fd.c filemap.c forward.c fqdncache.c \
+	ftp.c globals.h gopher.c helper.c htcp.c http.c \
+	HttpStatusLine.c HttpHdrCc.c HttpHdrRange.c HttpHdrContRange.c \
+	HttpHeader.c HttpHeaderTools.c HttpBody.c HttpMsg.c \
+	HttpReply.c HttpRequest.c icmp.c icp_v2.c icp_v3.c ident.c \
+	internal.c ipc.c ipcache.c leakfinder.c locrewrite.c logfile.c \
+	main.c mem.c MemPool.c MemBuf.c mime.c multicast.c neighbors.c \
 	net_db.c Packer.c pconn.c peer_digest.c peer_monitor.c \
 	peer_select.c peer_sourcehash.c peer_userhash.c protos.h \
 	redirect.c referer.c refresh.c send-announce.c snmp_core.c \
@@ -102,8 +102,10 @@ am__squid_SOURCES_DIST = access_log.c acl.c asn.c authenticate.c \
 	store_rebuild.c store_swapin.c store_swapmeta.c \
 	store_swapout.c structs.h tools.c typedefs.h unlinkd.c url.c \
 	urn.c useragent.c wais.c wccp.c wccp2.c whois.c win32.c
-@USE_EPOLL_FALSE@@USE_POLL_FALSE@@USE_SELECT_TRUE@am__objects_1 = comm_select.$(OBJEXT)
-@USE_EPOLL_FALSE@@USE_POLL_TRUE@am__objects_1 = comm_poll.$(OBJEXT)
+@USE_EPOLL_FALSE@@USE_KQUEUE_FALSE@@USE_POLL_FALSE@@USE_SELECT_TRUE@am__objects_1 = comm_select.$(OBJEXT)
+@USE_EPOLL_FALSE@@USE_KQUEUE_FALSE@@USE_POLL_TRUE@am__objects_1 = comm_poll.$(OBJEXT)
+@USE_EPOLL_FALSE@@USE_KQUEUE_TRUE@am__objects_1 =  \
+@USE_EPOLL_FALSE@@USE_KQUEUE_TRUE@	comm_kqueue.$(OBJEXT)
 @USE_EPOLL_TRUE@am__objects_1 = comm_epoll.$(OBJEXT)
 @USE_DELAY_POOLS_TRUE@am__objects_2 = delay_pools.$(OBJEXT)
 @USE_DNSSERVER_FALSE@am__objects_3 = dns_internal.$(OBJEXT)
@@ -307,6 +309,8 @@ USE_DNSSERVER_FALSE = @USE_DNSSERVER_FALSE@
 USE_DNSSERVER_TRUE = @USE_DNSSERVER_TRUE@
 USE_EPOLL_FALSE = @USE_EPOLL_FALSE@
 USE_EPOLL_TRUE = @USE_EPOLL_TRUE@
+USE_KQUEUE_FALSE = @USE_KQUEUE_FALSE@
+USE_KQUEUE_TRUE = @USE_KQUEUE_TRUE@
 USE_POLL_FALSE = @USE_POLL_FALSE@
 USE_POLL_TRUE = @USE_POLL_TRUE@
 USE_SELECT_FALSE = @USE_SELECT_FALSE@
@@ -377,6 +381,7 @@ target_alias = @target_alias@
 @ENABLE_WIN32SPECIFIC_FALSE@WIN32SOURCE = 
 @ENABLE_WIN32SPECIFIC_TRUE@WIN32SOURCE = win32.c
 @USE_EPOLL_TRUE@COMMLOOP_SOURCE = comm_epoll.c
+@USE_KQUEUE_TRUE@COMMLOOP_SOURCE = comm_kqueue.c
 @USE_POLL_TRUE@COMMLOOP_SOURCE = comm_poll.c
 @USE_SELECT_TRUE@COMMLOOP_SOURCE = comm_select.c
 SUBDIRS = fs repl auth
@@ -399,6 +404,7 @@ EXTRA_squid_SOURCES = \
 	comm_epoll.c \
 	comm_poll.c \
 	comm_select.c \
+	comm_kqueue.c \
 	comm_generic.c \
 	win32.c
 
@@ -732,6 +738,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm_epoll.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm_generic.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm_kqueue.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm_poll.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/comm_select.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
