--- a/configure.in
+++ b/configure.in
@@ -537,7 +537,7 @@ AC_ARG_ENABLE(wccp,
     USE_WCCP=0
   fi
 ])      
-if test USE_WCCP = 1; then
+if test $USE_WCCP = 1; then
     AC_DEFINE(USE_WCCP, 1, [Define to enable WCCP])
 fi
 
